Fixed description boxed being layer above navbar due to missing z-index value.

--- a/styles/default_style.less
+++ b/styles/default_style.less
@@ -22,6 +22,7 @@ body {
     #navbar {
         white-space: nowrap;
         overflow: hidden;
+        z-index: 15;
         background-color: @colorDarkBackground;
 
         .navbarIcon {
